--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
 
 @layer utilities{
   .padding-x{
-    @apply sm:px-10 px-5;
-  };
+    @apply sm:px-6 px-10;
+  }
   .padding-y {
     @apply sm:py-24 py-12;
   }
